# openplayground

./: .gitignore  LICENSE  README.md  build.py  dockerfile  local_run.sh  pyproject.toml
app/: .parcelrc  package.json  tailwind.config.js  tsconfig.tsbuildinfo
app/src/: app.tsx  constans.ts  index.css  index.html  index.js  index.tsx
app/src/components/: MultiSelect.tsx  ParameterSlider.tsx  inputarea.tsx  multi-select.tsx  navbar.tsx  parameter-slider.tsx  parameters-side-panel.tsx  parametersSidePanel.tsx
app/src/components/chat/: avatar.tsx  message-composer.tsx  message.tsx  scroll-container.tsx
app/src/components/ui/: alert-dialog.tsx  button.tsx  checkbox.tsx  dialog-sheet-base.tsx  dialog.tsx  history-side-panel.tsx  input.tsx  label.tsx  navigation-menu.tsx  popover.tsx  right-sheet.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  slider.tsx  switch.tsx  textarea.tsx  toast.tsx  toaster.tsx  tooltip.tsx
app/src/hooks/: use-breakpoint.ts
app/src/lib/: ctrl-meta-keypress.tsx  ctrlmetakeypress.tsx  editor-styles.tsx  editorStyles.tsx  keypress.tsx  meta-keypress.tsx  metakeypress.tsx  utils.ts
app/src/pages/: about.tsx  chat.tsx  compare.tsx  index.tsx  login_callback.tsx  playground.tsx  settings.tsx
app/src/utils/: auth.ts
client/: next.config.js  package.json  tailwind.config.js  tsconfig.json
client/src/app/: layout.tsx  page.tsx
client/src/components/: legacy-app.tsx
docs/: add_models.md  getting_started.md
inference/: main.py
openplayground/: README.md  pyproject.toml
openplayground/app/: package.json
openplayground/app/server/: models.json
openplayground/app/src/: index.tsx
openplayground/app/src/components/: ParameterSlider.tsx  navbar.tsx
openplayground/app/src/components/ui/: alert-dialog.tsx
openplayground/app/src/hooks/: useBreakpoint.ts
openplayground/app/src/lib/: metakeypress.tsx
openplayground/app/src/pages/: compare.tsx  playground.tsx
openplayground/openplayground/: app.py  requirements.txt  sse.py  sseserver.py
openplayground/openplayground/inference/huggingface/: generator.py  helpers.py
openplayground/openplayground/static/: index.1cdff7f7.js.br  index.1cdff7f7.js.map  index.1cdff7f7.js.map.br  index.21cf4e8c.css  index.21cf4e8c.css.br  index.21cf4e8c.css.map.br  index.61d3354a.css.map  index.ffb00651.js.br  index.html  index.html.br
openplayground/server/: app.py
server/: app.py  generator.py  message_announcer.py  models.json  models_optimal_defaults.json  package.json  requirements.txt  sse.py  sseserver.py  utils.py
server/inference/huggingface/: generator.py  hf.py
server/lib/: auth.py  entities.py  event_emitter.py  sse.py  sseserver.py  storage.py
server/lib/api/: __init__.py  inference.py  provider.py  response_utils.py  tfy_models.py
server/lib/inference/: __init__.py
server/static/: index.1cdff7f7.js  index.21cf4e8c.css.map  index.5530e416.js  index.5530e416.js.br  index.61d3354a.css  index.61d3354a.css.map  index.c0b28010.css  index.c0b28010.css.br  index.ffb00651.js  index.ffb00651.js.map  index.ffb00651.js.map.br  index.html  index.html.br
(+4 files in other folders)
