[tool.poetry]
name = "alexlovesphp"
version = "0.1.7a1"
description = "test"
authors = ["zainhuda <zainhudayyc@gmail.com>"]
readme = "README.md"
packages = [
    { include = "server", from = "" },
]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "*"
openai = "*"
cachetools = "*"
sseclient = "*"
psutil = "*"
torch = "*"
sentencepiece = "*"
Flask = "*"
Flask-Cors = "*"
huggingface-hub = "*"
python-dotenv = "*"

[tool.poetry.scripts]
alexlovesphp = "server.app:cli"

[[tool.poetry.source]]
name = 'pypi-public'
url = "https://pypi.org/simple/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
