[tool.poetry]
name = "openplayground"
version = "0.1.5"
description = "An LLM playground you can run on your laptop."
authors = ["Nat Friedman <nat@nat.org>"]
readme = "README.md"
homepage = "https://nat.dev/"
repository = "https://github.com/nat/openplayground"
keywords = ["llm", "playground", "openplayground"]
packages = [
  { include = "server", from = "" },
]
include = ["server/static/*"]

[tool.poetry.dependencies]
python = "^3.9"
aleph_alpha_client="^2.16.1"
anthropic = "^0.2.3"
cachetools="^5.3.0"
click="^8.1.3"
Flask="^2.2.3"
Flask_Cors="^3.0.10"
huggingface_hub="^0.13.2"
openai="^0.27.2"
psutil="^5.9.4"
python-dotenv="^1.0.0"
requests="^2.28.2"
six="^1.16.0"
sseclient="^0.0.27"
torch="^2.0.0"
transformers="^4.27.1"

[tool.poetry.scripts]
openplayground = "server.app:cli"

[[tool.poetry.source]]
name = 'pypi-public'
url = "https://pypi.org/simple/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
exclude = [
  ".env",
]