[tool.poetry]
name = "openplayground"
version = "0.1.0"
description = "test"
authors = ["zainhuda <zainhudayyc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.27.1"
openai = "^0.27.2"
cachetools = "^5.3.0"
sseclient = "^0.0.27"
psutil = "^5.9.4"
torch = "^2.0.0"
sentencepiece = "^0.1.97"

[tool.poetry.group.dev.dependencies]
openai = "^0.27.2"
Flask = "^2.2.3"
Flask-Cors = "^3.0.10"
huggingface-hub = "^0.13.2"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
openplayground = "openplayground.app:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
